[package]
name = "enderpearl"
version = "0.1.1"
edition = "2024"
authors = ["SirCesarium"]
description = "Async proxy for Minecraft and HTTP traffic with automated server wake-up."
license = "MIT"
repository = "https://github.com/sircesarium/enderpearl"
homepage = "https://github.com/sircesarium/enderpearl"
documentation = "https://docs.rs/enderpearl"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"], optional = true }
dashmap = "6.1"
futures = "0.3"
refractium = { version = "2", default-features = false, features = [
    "proto-http",
    "hooks",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[features]
default = ["cli"]
cli = ["dep:clap"]

[[bin]]
name = "enderpearl"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
