[package]
name = "enderpearl"
version = "0.1.3"
edition = "2024"
authors = ["SirCesarium"]
description = "Async proxy for Minecraft and HTTP traffic with automated server wake-up."
license = "MIT"
repository = "https://github.com/sircesarium/enderpearl"
homepage = "https://github.com/sircesarium/enderpearl"
documentation = "https://docs.rs/enderpearl"
readme = "README.md"

[dependencies]
anyhow = "1"
refractium = { version = "3", default-features = false, features = [
    "proto-http",
    "hooks",
    "logging",
] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "process"] }
clap = { version = "4.5", features = ["derive"], optional = true }
indicatif = { version = "0.18", optional = true }
owo-colors = { version = "4", optional = true }
toml = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
], optional = true }
inquire = { version = "0.9", optional = true }

[features]
default = ["full"]

# Groups
full = ["cli", "java", "bedrock", "fake-motd", "wait-list", "web", "pretty-cli", "logging"]

# Protocol logic
java = []
bedrock = []
web = []

# Logic Features
fake-motd = []
wait-list = []

# UI/UX Features
cli = ["dep:clap", "dep:toml", "dep:inquire"]
pretty-cli = ["cli", "dep:indicatif", "dep:owo-colors"]
logging = ["dep:tracing", "dep:tracing-subscriber"]

[[bin]]
name = "enderpearl"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
