[package]
name = "enderpearl"
version = "0.1.10"
edition = "2024"
authors = ["SirCesarium"]
description = "Async proxy for Minecraft and HTTP traffic with automated server wake-up."
license = "MIT"
repository = "https://github.com/sircesarium/enderpearl"
homepage = "https://github.com/sircesarium/enderpearl"
documentation = "https://docs.rs/enderpearl"
readme = "README.md"

[dependencies]
anyhow = "1"
refractium = { version = "3", default-features = false, features = [
    "proto-http",
    "hooks",
    "logging",
] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "io-std", "io-util"] }
clap = { version = "4.5", features = ["derive"], optional = true }
indicatif = { version = "0.18", optional = true }
owo-colors = { version = "4", optional = true }
toml = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
], optional = true }
inquire = { version = "0.9", optional = true }
serde_json = "1.0.150"
reqwest = { version = "0.13.3", features = ["json", "rustls"] }

[features]
default = ["full"]

# Groups
full = ["cli", "java", "web", "pretty-cli", "logging"]

# Protocol logic
java = []

web = []

# UI/UX Features
cli = ["dep:clap", "dep:toml", "dep:inquire"]
pretty-cli = ["cli", "dep:indicatif", "dep:owo-colors"]
logging = ["dep:tracing", "dep:tracing-subscriber"]

[lib]
name = "enderpearl"
path = "src/lib.rs"

[[bin]]
name = "enderpearl"
path = "src/main.rs"
required-features = ["cli"]

[package.metadata.deb]
maintainer = "SirCesarium"
section = "net"
priority = "optional"
assets = [
    ["target/release/enderpearl", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/enderpearl", dest = "/usr/bin/enderpearl", mode = "755" },
]

[lints.clippy]
all = "deny"
pedantic = "deny"
unwrap_used = "deny"
expect_used = "deny"
absolute_paths = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
